Fixed main page layout bug.

--- a/trunk/themes/pahma/style/style.css
+++ b/trunk/themes/pahma/style/style.css
@@ -114,7 +114,7 @@ em{
 	margin-bottom:0px;
 	margin-left:auto;
 	margin-right:auto;
-	padding:0px 0px 15px 0px;
+	padding:0px 20px 15px;
 	overflow: auto;
 }
 
